# forecasting_credit_data

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  mypy.ini  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
dashboard/: app.py
docs/: PLAN.md
examples/: example_scenarios.yaml  pipeline.yaml  target_curves.yaml
scripts/: apply_curve_calibration.py  build_features.py  compare_scenarios.py  generate_multiproduct_sample.py  generate_reports.py  generate_sample.py  ingest_lendingclub.py  run_calibration.py  run_cecl.py  run_cecl_multiproduct.py  run_end_to_end.py  run_end_to_end_config.py  run_scenarios.py  run_spark_pipeline.py  update_index.py  validate_dataset.py
src/credit_data/: __init__.py  calibration.py  cecl.py  config.py  curve_calibration.py  features.py  generator.py  lendingclub_ingest.py  logging_utils.py  macro.py  manifest.py  reporting.py  schemas.py  spark_pipeline.py  validation.py
src/credit_data/products/: __init__.py  auto.py  heloc.py  mortgage.py  personal.py
tests/: test_curve_calibration.py  test_features.py
